fix: preview overflow auto scroll #61

--- a/solidui-web/src/pages/Designer/Preview/preview.less
+++ b/solidui-web/src/pages/Designer/Preview/preview.less
@@ -22,6 +22,7 @@
 	right: 0;
 	bottom: 0;
 	background-color: #fff;
+	overflow: auto;
 }
 .featbar-wrapper {
 	display: flex;
